[package]
name = "purua"
version = "0.1.0"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.5.2"
combine-language = "4.0.0"
env_logger = "0.8.3"
log = "0.4.14"
