[package]
name = "purua"
version = "0.1.0"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
repository = "https://github.com/udzura/purua"
keywords = ["lua", "embedded"]
license-file = "LICENSE"
readme = "README.md"
description = "PU-RU-A is a PUre RUst luA implementation (to be)."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
# combine = "4.5.2"
# combine-language = "4.0.0"
env_logger = "0.8.3"
log = "0.4.14"
structopt = "0.3.21"
